# amber_ros

./: .gitignore  README.md
amber_description/: CMakeLists.txt  README.md  package.xml
amber_description/launch/: amber.rviz  amber_display.launch  amber_upload.launch
amber_description/meshes/model4/: camera_mount_base.stl  hand.stl  hand_left.stl  hand_right.stl  link1_left.stl  link1_right.stl  link3_left.stl  link3_right.stl  link4_left.stl  link4_right.stl  link5_left.stl  tip.stl  tip_left.stl  tip_right.stl
amber_description/urdf/: amber_model4.gazebo.xacro  amber_model4.materials.xacro  amber_model4.mesh.xacro  amber_model4.prim.xacro  amber_model4_hw.transmission.xacro  amber_model4_hw.urdf.xacro  amber_model4_hw_prim.urdf.xacro  amber_model4_sim.transmission.xacro  amber_model4_sim.urdf.xacro  amber_model4_sim_prim.urdf.xacro
amber_gazebo/: CMakeLists.txt  README.md  package.xml
amber_gazebo/config/: amber_model4_sim.yaml  amber_model4_sim_prim.yaml
amber_gazebo/launch/: amber_controller.launch  amber_model4_gazebo.launch
amber_moveit_config/: .setup_assistant  README.md  package.xml
amber_moveit_config/config/: amber_model4.srdf  amber_model4_prim.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  smoothing_filter_params.yaml
amber_moveit_config/launch/: amber_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_hw.launch  demo_hw_test.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
amber_ros_driver/: CMakeLists.txt  README.md  package.xml  setup.py
amber_ros_driver/launch/: amber_control.launch  amber_joint_check.launch  amber_ros_driver.launch
amber_ros_driver/scripts/: amber_action_server_node  amber_auto_calibration  amber_jointstates_integrator_node  amber_manual_calibration  amber_ros_driver_node
amber_ros_driver/src/amber_ros_driver/: amber_action_server_node.py  amber_driver.py  amber_jointstates_integrator_node.py  amber_ros_driver_node.py  hr4c_comm.py
amber_ros_driver/srv/: SetJointNo.srv  SetJointTrajectory.srv
amber_ros_driver/test/: amber_driver_test.py
amber_simple_joint_command_sender/: CMakeLists.txt  README.md  package.xml  setup.py
amber_simple_joint_command_sender/launch/: simple_joint_command.launch
amber_simple_joint_command_sender/msg/: SimpleJointTrajectory.msg
amber_simple_joint_command_sender/scripts/: amber_simple_joint_command_sender_node
amber_simple_joint_command_sender/src/amber_simple_joint_command_sender/: amber_simple_joint_command_sender_node.py
