<?xml version="1.0"?>
<package format="2">
  <name>amber_ros_driver</name>
  <version>0.0.0</version>
  <description>The amber_ros_driver package</description>

  <maintainer email="yoshikai@qibitech.com">T.Yoshikai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>industrial_trajectory_filters</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
