<?xml version="1.0"?>
<package format="2">
  <name>amber_simple_joint_command_sender</name>
  <version>0.0.0</version>
  <description>The amber_simple_joint_command_sender package</description>

  <maintainer email="yoshikai@qibitech.com">T.Yoshikai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
